canary-manifests/rollout-spring.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: APP_NAME
spec:
  replicas: REPLICAS
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: APP_NAME
  workloadRef:
    apiVersion: apps/v1
    kind: Deployment
    name: APP_NAME
  strategy:
    blueGreen: 
      activeService: APP_NAME
      previewService: APP_NAME-preview
      autoPromotionEnabled: AUTO_PROMOTION

---
kind: Service
apiVersion: v1
metadata:
  name: APP_NAME-preview
spec:
  selector:
    app.kubernetes.io/instance: APP_NAME
  ports:
  - protocol: TCP
    name: web
    port: 80
    targetPort: PORT_NUM
  type: LoadBalancer
