canary-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic
  namespace: petclinic
  labels:
    app: petclinic
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: "INGRESS_HOST"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: petclinic
                port:
                  number: 8080
